Microservice/kubernetes/dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ok-app-dp
spec:
  replicas: 3
  selector:
    matchLabels:
      env: ok-app
  template:
    metadata:
      labels:
        env: ok-app
    spec:
      containers:
      - name: ok-app-pod-dp
        image: danilflint/ok_microservice
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 25
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 45
          periodSeconds: 20
          failureThreshold: 5
